--- a/doc/TODO.org
+++ b/doc/TODO.org
@@ -3,6 +3,7 @@
 Jesli nie skolejkuje sie na poczatku kilku pakietow to nie ma pewnosci ze nadanie bitu sie uda gdyz rozmowa moze sie w kazdej chwili zakonczyc. Jesli nie uda sie przeslac tego jednego bitu to cala paczka idzie do piachu
 Wykrywanie takiej sytuacji po stronie nadawcy nie jest zadnym sensownym rozwiazaniem
 
+
 * TODO Protokol potwierdzen i powtorzen
 
 * Co mozna zrobic z pakietami RTP?
@@ -12,10 +13,13 @@ Wykrywanie takiej sytuacji po stronie nadawcy nie jest zadnym sensownym rozwiaza
 ** Przyspieszyc
 ** Zamienic kolejnosc <-- to tez jest opoznienie bo trzeba dysponowac dwoma pakietami
 
+
 * Schemat dzialania:
   1. nadawca wysyla sekewencje A informujaca o paczce danych
   2. nadawca rozpoczyna wysylanie paczki danych
   3. odbiornik potwierdza odebranie paczki
 
+* Minimalna liczba pakietow w danym strumieniu pomiedzy bitami - unikanie pomylek
+  W strumieni musi uplynac przynajmniej X pakietow zanim zostanie nadany bit. To moze pozwolic na unikniecie przypadkowych przeklaman, ale wymaga kolejkowanie pakietow nawet jesli strumien jest nieoblusgiwany
 
-
+* TODO W dokumentacji opisac ramke SDP, wkleic PELNA z Wiresharka
